--- a/www/css/bootstrap.less
+++ b/www/css/bootstrap.less
@@ -5,7 +5,9 @@
  *
  * Designed and built with all the love in the world by @mdo and @fat.
  */
+
 /*! normalize.css v2.1.3 | MIT License | git.io/normalize */
+
 article,
 aside,
 details,
@@ -20,60 +22,75 @@ section,
 summary {
   display: block;
 }
+
 audio,
 canvas,
 video {
   display: inline-block;
 }
+
 audio:not([controls]) {
   display: none;
   height: 0;
 }
+
 [hidden],
 template {
   display: none;
 }
+
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
 }
+
 body {
   margin: 0;
 }
+
 a {
   background: transparent;
 }
+
 a:focus {
   outline: thin dotted;
 }
+
 a:active,
 a:hover {
   outline: 0;
 }
+
 h1 {
   margin: 0.67em 0;
   font-size: 2em;
 }
+
 abbr[title] {
   border-bottom: 1px dotted;
 }
+
 b,
 strong {
   font-weight: bold;
 }
+
 dfn {
   font-style: italic;
 }
+
 hr {
   height: 0;
   -moz-box-sizing: content-box;
-  box-sizing: content-box;
+       box-sizing: content-box;
 }
+
 mark {
   color: #000;
   background: #ff0;
 }
+
 code,
 kbd,
 pre,
@@ -81,15 +98,19 @@ samp {
   font-family: monospace, serif;
   font-size: 1em;
 }
+
 pre {
   white-space: pre-wrap;
 }
+
 q {
   quotes: "\201C" "\201D" "\2018" "\2019";
 }
+
 small {
   font-size: 80%;
 }
+
 sub,
 sup {
   position: relative;
@@ -97,30 +118,38 @@ sup {
   line-height: 0;
   vertical-align: baseline;
 }
+
 sup {
   top: -0.5em;
 }
+
 sub {
   bottom: -0.25em;
 }
+
 img {
   border: 0;
 }
+
 svg:not(:root) {
   overflow: hidden;
 }
+
 figure {
   margin: 0;
 }
+
 fieldset {
   padding: 0.35em 0.625em 0.75em;
   margin: 0 2px;
   border: 1px solid #c0c0c0;
 }
+
 legend {
   padding: 0;
   border: 0;
 }
+
 button,
 input,
 select,
@@ -129,14 +158,17 @@ textarea {
   font-family: inherit;
   font-size: 100%;
 }
+
 button,
 input {
   line-height: normal;
 }
+
 button,
 select {
   text-transform: none;
 }
+
 button,
 html input[type="button"],
 input[type="reset"],
@@ -144,38 +176,49 @@ input[type="submit"] {
   cursor: pointer;
   -webkit-appearance: button;
 }
+
 button[disabled],
 html input[disabled] {
   cursor: default;
 }
+
 input[type="checkbox"],
 input[type="radio"] {
   padding: 0;
   box-sizing: border-box;
 }
+
 input[type="search"] {
   -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
+     -moz-box-sizing: content-box;
+          box-sizing: content-box;
   -webkit-appearance: textfield;
 }
+
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
+
 button::-moz-focus-inner,
 input::-moz-focus-inner {
   padding: 0;
   border: 0;
 }
+
 textarea {
   overflow: auto;
   vertical-align: top;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+
+
+
 @media print {
   * {
     color: #000 !important;
@@ -212,7 +255,7 @@ table {
   img {
     max-width: 100% !important;
   }
-  @page {
+  @page  {
     margin: 2cm .5cm;
   }
   p,
@@ -250,17 +293,20 @@ table {
     border: 1px solid #ddd !important;
   }
 }
+
 *,
 *:before,
 *:after {
   -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 }
+
 html {
   font-size: 62.5%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
@@ -268,6 +314,7 @@ body {
   color: #333333;
   background-color: #ffffff;
 }
+
 input,
 button,
 select,
@@ -276,31 +323,38 @@ textarea {
   font-size: inherit;
   line-height: inherit;
 }
+
 a {
   color: #428bca;
   text-decoration: none;
 }
+
 a:hover,
 a:focus {
   color: #2a6496;
   text-decoration: underline;
 }
+
 a:focus {
   outline: thin dotted #333;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
+
 img {
   vertical-align: middle;
 }
+
 .img-responsive {
   display: block;
   height: auto;
   max-width: 100%;
 }
+
 .img-rounded {
   border-radius: 6px;
 }
+
 .img-thumbnail {
   display: inline-block;
   height: auto;
@@ -311,92 +365,117 @@ img {
   border: 1px solid #dddddd;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
+          transition: all 0.2s ease-in-out;
 }
+
 .img-circle {
   border-radius: 50%;
 }
+
 hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
   border-top: 1px solid #eeeeee;
 }
+
 #header {
+
   border-bottom: 1px solid #e3e3e3;
   margin-bottom: 20px;
+
 }
+
+
 .task.closed {
   opacity: 0.5;
+
+  header {
+    button {
+      display: none;
+    }
+  }
 }
-.task.closed header button {
-  display: none;
-}
+
 #sidebar {
   width: 25%;
   float: left;
-  padding-left: 5%;
+  padding-left: 5%; 
+
+  a {
+    display: inline-block;
+    width: 100%;
+    padding: 10px;
+  }
 }
-#sidebar a {
-  display: inline-block;
-  width: 100%;
-  padding: 10px;
-}
-#content {
+
+#content{
   width: 70%;
   float: right;
   margin-right: 5%;
+
 }
+
 .task {
   border: 1px solid #e3e3e3;
   margin-bottom: 10px;
-}
-.task header {
-  background: #f2f2f2;
-  overflow: hidden;
-  padding: 5px 8px;
-}
-.task header h1 {
-  font-size: 1.2em;
-  line-height: 1.4em;
-  float: left;
-  margin: 0;
-  padding: 4px;
-}
-.task header button {
-  display: block;
-  float: right;
-  padding: 0 5px;
-  border: 1px solid #ccc;
-  background-color: white;
-  text-indent: -9999px;
-  width: 28px;
-  height: 28px;
-  margin: 0px 8px 0px 0px;
-}
-.task header button.active {
-  background: pink;
-}
-.task header button.completed {
-  border: 1px solid #ccc;
-  background: white;
-  text-indent: -9999px;
-  width: 20px;
-  height: 20px;
-  float: left;
-  margin: 5px 10px 5px 2px;
-  position: relative;
-}
-.task header button.completed:hover:after {
-  content: "";
-  position: absolute;
-  top: 2px;
-  bottom: 2px;
-  left: 2px;
-  right: 2px;
-  background-color: #ccc;
-}
-.task > div {
-  display: none;
-  padding: 10px;
+
+  header {
+    background: darken(#fff, 5%);
+    overflow: hidden;
+    padding: 5px 8px;
+
+    h1 {
+      font-size: 1.2em;
+      line-height: 1.4em;
+      float: left;
+      margin: 0;
+      padding: 4px;
+    }
+    button {
+      display: block;
+      float: right;
+      padding: 0 5px;
+      border: 1px solid #ccc;
+      background-color: white;
+      text-indent: -9999px;
+      width: 28px;
+      height: 28px;
+      margin: 0px 8px 0px 0px;
+      
+      &.active {
+        background: pink;
+      }
+      &.completed {
+        border: 1px solid #ccc;
+        background: white;
+        text-indent: -9999px;
+        width: 20px;
+        height: 20px;
+        float: left;
+        margin: 5px 10px 5px 2px;
+
+        position: relative;
+
+        &:hover:after {
+          content: "";
+          position: absolute;
+          top: 2px;
+          bottom: 2px;
+          left: 2px;
+          right: 2px;
+          background-color: #ccc;
+
+        }
+      }
+    }
+
+  }
+
+  > div {
+    display: none;
+    padding: 10px;
+  }
+
+
 }
